--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
   datasource:
   url: jdbc:h2:tcp://localhost/~/jpashop
   username: sa
@@ -7,14 +10,15 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2-console
+      path: /h2
   jpa:
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
 #      show_sql: true
-      format_sql: true
-logging.level:
-  org.hibernate.SQL: debug
+        format_sql: true
+logging:
+  level:
+    org.hibernate.SQL: debug
 #  org.hibernate.type: trace
